--- a/include/views/default/crunchbutton/legal/index.phtml
+++ b/include/views/default/crunchbutton/legal/index.phtml
@@ -12,7 +12,7 @@ All users who are minors in the jurisdiction in which they reside (generally und
 
 2.  Purpose
 
-We have created the Site to serve as a marketplace to facilitate the ordering and delivering of food. Crunchbutton does not sell or control the production of any food produced and simply provides buyers the ability to search for and find local restaurants that deliver or make food available for pick up.
+We have created the Site to serve as a marketplace to facilitate the ordering and delivering of food. Crunchbutton simply provides buyers the ability to search for and order food from local restaurants that deliver or make food available for pick up, which then may be delivered by 3rd party contractors.
 
 3.  Use of the Site
 
@@ -125,7 +125,7 @@ Youbeo, Inc., d/b/a Crunchbutton, including its affiliates ("Crunchbutton"), is 
 
 9.1 If you have any questions about this Policy, the practices of this site, or your dealings with this site, please contact us at <a href="mailto:{{join}}">{{join}}</a>
 
-This document was last updated on May 15, 2013.
+This document was last updated on October 27th, 2014.
 
 ')?>
 </p>
