--- a/include/views/default/cockpit2/frontend/general/general-info.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-info.phtml
@@ -1,10 +1,19 @@
+<div class="content-padding">
 
-
-<div class="content-padding" ng-show="ready">
-
-	<h1 class="title left"><i class="fa fa-user"></i><span>Info</span></h1>
+	<h1 class="title driver-title"><i class="fa fa-truck"></i></h1>
 
 	<div class="divider"></div>
-		<p>Crunchbutton provides a unique experience to customers, and delivery drivers.</p>
+		<p>
+			Crunchbutton serves as a marketplace to facilitate the ordering of food through the Crunchbutton app to the customer delivered by drivers.
+			<br><br>
+			The Cockpit App serves as an interface to drivers for accepting and managing orders to deliver to customers.
+			<br><br>
+			Ready to become an awesome driver?
+		</p>
+		<br><br><br>
+		<a href="/onboarding">
+			<button class="button green">Apply Now</button>
+		</a>
+
 	</div>
 </div>
