--- a/include/views/default/cockpit2/frontend/general/general-login.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-login.phtml
@@ -1,6 +1,9 @@
 <div class="login-wrap" ng-controller="LoginCtrl" ng-class="{'logged-in': account.loggedin, 'logged-out': !account.loggedin}">
 	<div class="login-content hide-before-init fade-in-enter">
-		<div class="logo" ng-switch="welcome">
+		<div class="logo" ng-if="newuser">
+			<span class="item">Welcome to Cockpit</span>
+		</div>
+		<div class="logo" ng-switch="welcome" ng-if="!newuser">
 
 			<span class="item" ng-switch-when="1">well, <span class="green">hello</span> there<span class="dot">!</span></span>
 			<span class="item" ng-switch-when="2">aren't you looking <span class="green">lovely</span> today<span class="dot">!</span></span>
@@ -38,21 +41,23 @@
 		
 		<div class="info">
 
-			<a href="/onboarding">
+
+			<a href="/info">
 				<div class="login-option login-option-user">
-					<div class="circle"><i class="fa fa-user"></i></div>
+					<div class="circle"><i class="fa fa-truck"></i></div>
 					<br>
-					New User
+					Cockpit Information
+				</div>
+			</a>
+			
+			<a href="http://crunchbutton.com/app" target="_system">
+				<div class="login-option login-option-user">
+					<div class="circle"><i class="fa fa-cutlery"></i></div>
+					<br>
+					Crunchbutton App
 				</div>
 			</a>
 
-			<a href="/legal">
-				<div class="login-option login-option-terms">
-					<div class="circle"><i class="fa fa-info"></i></div>
-					<br>
-					Terms of Use
-				</div>
-			</a>
 
 		</div>
 	</div>
