--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -132,14 +132,6 @@
 						</tr>
 					</table>
 				</li>
-				<li ng-if="!account.user.id" ng-click="navigation.link('/help')" ng-class="{'nav-active': (navigation.page == 'help')}">
-					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
-						<tr>
-							<td class="side-menu-icon"><i class="fa fa-support"></i></td>
-							<td class="side-menu-label">Help</a></td>
-						</tr>
-					</table>
-				</li>
 				<? /*
 				<li ng-click="navigation.link('/splash')" ng-class="{'nav-active': (navigation.page == 'home')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
@@ -190,13 +182,25 @@
 						</tr>
 					</table>
 				</li>
-				<li ng-click="navigation.link('/login')" ng-if="!account.user.id_admin">
+				<li ng-click="navigation.link('/login')" ng-if="!account.user.id_admin" ng-class="{'nav-active': (navigation.page == 'login')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-sign-in"></i></td>
 							<td class="side-menu-label">Sign In</a></td>
 						</tr>
 					</table>
+				</li>
+				<li ng-if="!account.user.id" ng-click="navigation.link('/info')" ng-class="{'nav-active': (navigation.page == 'info')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-support"></i></td>
+							<td class="side-menu-label">More Info</a></td>
+						</tr>
+					</table>
+				</li>
+				<li>
+					<br><br><br><br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&copy; <?=date('Y')?> Youbeo, Inc. <a href="/legal">Terms of Use</a>
 				</li>
 			</ul>
 
