--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -190,7 +190,7 @@
 						</tr>
 					</table>
 				</li>
-				<li ng-if="!account.user.id" ng-click="navigation.link('/info')" ng-class="{'nav-active': (navigation.page == 'info')}">
+				<li ng-if="!account.user.id_admin" ng-click="navigation.link('/info')" ng-class="{'nav-active': (navigation.page == 'info')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-support"></i></td>
