--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -243,7 +243,7 @@
 							*/ ?>
 						</div>
 
-						<div class="logo">cockpit<span class="dot">.</span><span class="green">la</span></div>
+						<div class="logo"><span class="dot"></span><span class="green">cockpit</span></div>
 
 					</div>
 				</div>
