--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -233,7 +233,7 @@
 								<i class="fa fa-truck"></i>
 							</div>
 							<div class="notification notification-support" ng-click="navigation.menu('right')">
-								<div class="badge" ng-show="supportMessages.count">{{supportMessages.count}}</div>
+								<div class="badge" ng-show="supportMessages.count && supportMessages.count != '0'">{{supportMessages.count}}</div>
 								<i class="fa fa-comment"></i>
 							</div>
 							<? /*
