fixed potential base href issue

--- a/include/views/default/cockpit2/layout/html.top.phtml
+++ b/include/views/default/cockpit2/layout/html.top.phtml
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<base href="/">
+<base href="">
 <head>
 <title><?=$this->title ? $this->title : 'Cockpit'?></title>
 <meta name="fragment" content="!" />
