fixed image path issue

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -648,7 +648,7 @@ p {
       rgba(0, 0, 0, 0.25),
       rgba(0, 0, 0, 0.25)
     ),
-	url(/assets/images/micro/bg-sandwich.jpg);
+	url(../images/bg-sandwich.jpg);
 	background-position: top right;
 	background-size: 150%;
 }
