--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -235,7 +235,7 @@
 					<div class="admin-item">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
-								3rd Party Delivery?
+								Delivery by Crunchbutton?
 							</div>
 						</div>
 
@@ -247,7 +247,7 @@
 					<div class="admin-item" id="formal-relationship-container">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
-								Formal Billing Relationship
+								Formal billing relationship?
 							</div>
 
 							<div class="admin-item-desc">
@@ -264,7 +264,7 @@
 					<div class="admin-item" id="order-notifications-sent-container">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
-								Order Notifications Sent
+								Send order notifications?
 							</div>
 
 							<div class="admin-item-desc"></div>
