--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -151,7 +151,7 @@
 						</ul>
 					</div>
 
-					<button class="button lightorange restaurant-items-toggle" ng-click="fullmenu=0">less food</button>
+					<div class="more-food-link restaurant-items-toggle" ng-click="fullmenu=0">less food</div>
 				</div>
 
 				<div ng-show="!fullmenu">
