--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2585,11 +2585,15 @@ b, strong{ font-weight: bold; }
 	width: 29em;
 	margin: 4em auto;
 	position:relative;
-	padding: 2em;
+	padding: 1.5em;
 	line-height:2em;
+	border-radius: 4px;
 }
 .dialog p{
-	margin: 2em 0;
+	margin: 0 0 2em 0;
+}
+.dialog .button {
+	border-radius: 4px;
 }
 .mfp-bg {
 	background-color: #1c0f0e !important;
