--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -98,30 +98,19 @@
 
 <!-- /actions -->
 
-<div class="content-padding box-content2">
-	<div class="content">
-		<div class="wrap">
+<div class="content-padding">
+
+
 			<div class="status"></div>
-			<div class="dialog-message dialog-message-error check-reminder">
-				Double check to make sure you received exactly the right food!
+			<div class="dialog-message dialog-message-notice check-reminder">
+				<b>Double check</b> to make sure you received exactly the right food!
 			</div>
 			<div class="header order-header">
-				<div class="restaurant-name"><strong>Order</strong></div>
-				<div class="order-id">
-				<table>
-					<tbody>
-						<tr>
-							<td><b>#</b></td>
-							<td><b>{{order.id_order}}</b></td>
-						</tr>
-					</tbody>
-				</table>
-				</div>
-				<div class="divider"></div>
+				#{{order.id_order}}
 			</div>
 			<div class="order">
 				<div class="order-item-info">
-					<div class="order-item-block">
+					<div class="order-item-block left">
 						<div class="order-icon" ng-if="order.delivery_type=='takeout'"><i class="fa fa-taxi"></i></div>
 						<div class="order-icon" ng-if="order.delivery_type=='delivery'"><i class="fa fa-car"></i></div>
 						<div class="order-info">
@@ -129,7 +118,7 @@
 							<span ng-if="order.delivery_type=='delivery'">Delivery</span>
 						</div>
 					</div>
-					<div class="order-item-block">
+					<div class="order-item-block right">
 						<div class="order-icon" ng-if="order.pay_type=='card'"><i class="fa fa-credit-card"></i></div>
 						<div class="order-icon" ng-if="order.pay_type=='cash'"><i class="fa fa-money"></i></div>
 						<div class="order-info">
@@ -137,13 +126,14 @@
 							<span ng-if="order.pay_type=='cash'">Cash</span>
 						</div>
 					</div>
-					<div class="order-item-block">
+					<div class="divider"></div>
+					<div class="order-item-block left">
 						<div class="order-icon"><i class="fa fa-clock-o"></i></div>
 						<div class="order-info">
 							At {{order.time_formated}}
 						</div>
 					</div>
-					<div class="order-item-block">
+					<div class="order-item-block right">
 						<div class="order-icon"><i class="fa fa-heart"></i></div>
 						<div class="order-info">
 							<span ng-if="order._delivery_estimated_time">By </br> {{order._delivery_estimated_time}}</span>
@@ -229,90 +219,92 @@
 				<br><br>
 				<div class="divider dots"></div>
 				<br><br>
-				<table width="100%" celpadding="0" cellspacing="0" class="detail">
-					<thead>
-						<td class="topitem">Qty</td>
-						<td class="topitem itemname">Item</td>
-						<td class="topitem itemprice">Store Price</td>
-					</thead>
-					<tbody>
-						<tr ng-repeat="dish in order._dishes">
-							<td class="fooditem">1</td>
-							<td class="fooditem dish-name">{{dish.name}} {{dish.options.without_default_options}} {{dish.options.with_option}} {{dish.options.select_options}} </td>
-							<td class="fooditem dish-price">
-								${{dish.price.regular | formatPrice}}
-							</td>
-						</tr>
-						<tr class="class">
-							<td></td>
-							<td class="dish-price">Subtotal</td>
-							<td class="dish-price">
-								${{order.price | formatPrice}}
-							</td>
-						</tr>
-						<!-- IN CASE WE NEED TO ADD THIS IN THE FUTURE
-						<tr ng-if="order._tip">
-							<td></td>
-							<td style="text-align:right; font-size:24px;color:#666;">Tip <span ng-if="order.tip_type != 'number'"></span></td>
-							<td style="text-align:right; font-size:24px;color:#666;">${{order._tip | formatPrice}}</td>
-						</tr>
-
-						<tr ng-if="order.delivery_fee">
-							<td></td>
-							<td style="text-align:right; font-size:24px;color:#666;">Delivery Fee</td>
-							<td style="text-align:right; font-size:24px;color:#666;">${{order.delivery_fee | formatPrice}}</td>
-						</tr>
-						<tr ng-if="order.service_fee">
-							<td></td>
-							<td style="text-align:right">Service Fee</td>
-							<td>${{order.service_fee | formatPrice}}</td>
-							<php if( $isDriverCockpit ) {  />
-						</tr>
-						-->
-						<tr>
-							<td></td>
-							<td class="dish-price">Tax</td>
-							<td class="dish-price">
-								${{order._tax | formatPrice}}
-							</td>
-						</tr>
-						<tr class="order-total-row">
-							<td></td>
-							<td class="order-total-text">Total</td>
-							<td class="dish-price">
-								${{order._final_price | formatPrice}}
-							</td>
-						</tr>
-						<tr ng-if="order._tip_with_cash">
-							<td class="order-tip-cash" colspan="3">Customer is tipping with cash</td>
-						</tr>
-						<tr>
-							<td class="your-take" colspan="4">
-								<!--MAKE THE "CUSTOMER TOTAL" AND "YOUR TAKE" HERE -->
-								<div class="cust-pay-method">
-									<div ng-if="order.pay_type=='cash'"><div class="pay-icon" ><i class="fa fa-money"></i></div><span class="cust-pay-method-text">Customer is paying by {{order.pay_type}}</span></div>
-									<div ng-if="order.pay_type=='card'"><div class="pay-icon" ><i class="fa fa-credit-card"></i></div><span class="cust-pay-method-text">Customer is paying by {{order.pay_type}}</span></div>
-									<?//<span><i class="icon-{{order.pay_type}}"></i> Customer is paying by {{order.pay_type}}</span> ?>
-								</div>
-
-								<div class="customer-total-block">
-									<span class="customer-total-price">${{order.final_price_plus_delivery_markup | formatPrice}}</span></br></br>
-									<span class="customer-total-text"><strong>Customer total</strong></span>
-									</br>
-								</div>
-
-								<div class="tip-total-block">
-									<?//SAME CSS CONFIGURATION ?>
-									<span class="tip-total-price">${{driverTake.total | formatPrice}}</span></br></br>
-									<span class="tip-total-text"><strong>Your take (fee+tip)</strong></span>
-									</br>
-								</div>
-							</td>
-					</tbody>
-				</table>
+				<div class="content-padding box-content2">
+					<table width="100%" celpadding="0" cellspacing="0" class="detail">
+						<thead>
+							<td class="topitem">Qty</td>
+							<td class="topitem itemname">Item</td>
+							<td class="topitem itemprice">Store Price</td>
+						</thead>
+						<tbody>
+							<tr ng-repeat="dish in order._dishes">
+								<td class="fooditem">1</td>
+								<td class="fooditem dish-name">{{dish.name}} {{dish.options.without_default_options}} {{dish.options.with_option}} {{dish.options.select_options}} </td>
+								<td class="fooditem dish-price">
+									${{dish.price.regular | formatPrice}}
+								</td>
+							</tr>
+							<tr class="class">
+								<td></td>
+								<td class="dish-price">Subtotal</td>
+								<td class="dish-price">
+									${{order.price | formatPrice}}
+								</td>
+							</tr>
+							<!-- IN CASE WE NEED TO ADD THIS IN THE FUTURE
+							<tr ng-if="order._tip">
+								<td></td>
+								<td style="text-align:right; font-size:24px;color:#666;">Tip <span ng-if="order.tip_type != 'number'"></span></td>
+								<td style="text-align:right; font-size:24px;color:#666;">${{order._tip | formatPrice}}</td>
+							</tr>
+	
+							<tr ng-if="order.delivery_fee">
+								<td></td>
+								<td style="text-align:right; font-size:24px;color:#666;">Delivery Fee</td>
+								<td style="text-align:right; font-size:24px;color:#666;">${{order.delivery_fee | formatPrice}}</td>
+							</tr>
+							<tr ng-if="order.service_fee">
+								<td></td>
+								<td style="text-align:right">Service Fee</td>
+								<td>${{order.service_fee | formatPrice}}</td>
+								<php if( $isDriverCockpit ) {  />
+							</tr>
+							-->
+							<tr>
+								<td></td>
+								<td class="dish-price">Tax</td>
+								<td class="dish-price">
+									${{order._tax | formatPrice}}
+								</td>
+							</tr>
+							<tr class="order-total-row">
+								<td></td>
+								<td class="order-total-text">Total</td>
+								<td class="dish-price">
+									${{order._final_price | formatPrice}}
+								</td>
+							</tr>
+							<tr ng-if="order._tip_with_cash">
+								<td class="order-tip-cash" colspan="3">Customer is tipping with cash</td>
+							</tr>
+							<tr>
+								<td class="your-take" colspan="4">
+									<!--MAKE THE "CUSTOMER TOTAL" AND "YOUR TAKE" HERE -->
+									<div class="cust-pay-method">
+										<div ng-if="order.pay_type=='cash'"><div class="pay-icon" ><i class="fa fa-money"></i></div><span class="cust-pay-method-text">Customer is paying by {{order.pay_type}}</span></div>
+										<div ng-if="order.pay_type=='card'"><div class="pay-icon" ><i class="fa fa-credit-card"></i></div><span class="cust-pay-method-text">Customer is paying by {{order.pay_type}}</span></div>
+										<?//<span><i class="icon-{{order.pay_type}}"></i> Customer is paying by {{order.pay_type}}</span> ?>
+									</div>
+	
+									<div class="customer-total-block">
+										<span class="customer-total-price">${{order.final_price_plus_delivery_markup | formatPrice}}</span></br></br>
+										<span class="customer-total-text"><strong>Customer total</strong></span>
+										</br>
+									</div>
+	
+									<div class="tip-total-block">
+										<?//SAME CSS CONFIGURATION ?>
+										<span class="tip-total-price">${{driverTake.total | formatPrice}}</span></br></br>
+										<span class="tip-total-text"><strong>Your take (fee+tip)</strong></span>
+										</br>
+									</div>
+								</td>
+						</tbody>
+					</table>
+				</div>
 
 
 			</div>
-		</div>
-	</div>
+
+
 </div>
