--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
@@ -19,6 +19,10 @@
 			<div class="label">Type:</div>
 			<select ng-model="pay_type" ng-options="opt.type as opt.label for opt in pay_types" class="cart-customize-select"></select>
 		</li>
+		<li class="li-input">
+			<div class="label">Balanced Status:</div>
+			<select ng-model="balanced_status_filter" ng-options="opt.type as opt.label for opt in balanced_statuses" class="cart-customize-select"></select>
+		</li>
 	</ul>
 
 	<div ng-if="count">
@@ -54,6 +58,10 @@
 					<td>{{payment.pay_type}}</td>
 					<td>$ {{payment.amount | formatPrice}}</td>
 					<td ng-class="payment.balanced_status">
+						<span ng-if="payment.balanced_failure_reason">
+							<i title="{{payment.balanced_failure_reason}}" class="fa fa-warning"></i>&nbsp;
+						</span>
+
 						{{payment.balanced_status}}
 						<span title="Check balanced status" class="link no-underline" ng-if="payment.balanced_status != 'succeeded'" ng-click="balanced_status( payment.id_payment );"> <i class="fa fa-refresh"></i> </span>
 					</td>
