put tip there instead

--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -299,6 +299,14 @@
 										</br>
 									</div>
 		*/ ?>
+									<div class="tip-total-block">
+										<?//SAME CSS CONFIGURATION ?>
+										<span class="tip-total-price">${{order._tip | formatPrice}}</span></br></br>
+										<span class="tip-total-text"><strong>Tip</strong></span>
+										</br>
+									</div>
+		
+		
 								</td>
 						</tbody>
 					</table>
